force-app/main/default/objects/Sample_Request__c/Sample_Request__c.object-meta.xml
<CustomObject>
    <label>Sample Request</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>