force-app/main/default/objects/Sample_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Request</relationshipLabel>
    <relationshipName>Sample_Request</relationshipName>
    <type>Lookup</type>
</CustomField>