force-app/main/default/objects/Sample_Request__c/fields/Additional_Email_Id_s__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_Id_s__c</fullName>
    <label>Additional Email Id&apos;s</label>
    <type>TextArea</type>
</CustomField>