force-app/main/default/objects/Sample_Request__c/fields/Any_Other_Specific_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Specific_Requirement__c</fullName>
    <label>Any Other Specific Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>