force-app/main/default/objects/Sample_Request__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <label>Batch No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>