force-app/main/default/objects/Sample_Request__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <label>Bill To Address</label>
    <type>Address</type>
</CustomField>