force-app/main/default/objects/Sample_Request__c/fields/Customer_Agent_Request_Letter_Enclosed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agent_Request_Letter_Enclosed__c</fullName>
    <label>Customer/Agent Request Letter Enclosed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>