force-app/main/default/objects/Sample_Request__c/fields/Customer_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Person__c</fullName>
    <label>Customer Contact   Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>