force-app/main/default/objects/Sample_Request__c/fields/Customer_Contact_Person_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Person_Phone_number__c</fullName>
    <label>Customer Contact Person Phone number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>