force-app/main/default/objects/Sample_Request__c/fields/Customer_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Comments__c</fullName>
    <label>Customer Feedback Comments</label>
    <type>TextArea</type>
</CustomField>