force-app/main/default/objects/Sample_Request__c/fields/Customer_Feedback_Received_on__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Received_on__c</fullName>
    <label>Customer Feedback Received on</label>
    <type>Date</type>
</CustomField>