force-app/main/default/objects/Sample_Request__c/fields/Customer_Specifications_Enclosed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specifications_Enclosed__c</fullName>
    <label>Customer Specifications Enclosed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>