force-app/main/default/objects/Sample_Request__c/fields/Customer_Specifications_PSD__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specifications_PSD__c</fullName>
    <label>Customer Specifications / PSD</label>
    <type>TextArea</type>
</CustomField>