force-app/main/default/objects/Sample_Request__c/fields/End_market__c.field-meta.xml
<CustomField>
    <fullName>End_market__c</fullName>
    <label>End market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Market_Picklist</valueSetName>
    </valueSet>
</CustomField>