force-app/main/default/objects/Sample_Request__c/fields/Impurity_QTY__c.field-meta.xml
<CustomField>
    <fullName>Impurity_QTY__c</fullName>
    <label>Impurity (QTY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>