force-app/main/default/objects/Sample_Request__c/fields/Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms__c</fullName>
    <label>Inco Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW - Ex Works (insert place of delivery)</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier (Insert named place of delivery)</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage Paid to (insert place of destination)</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and Insurance Paid To (insert place of destination)</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered at Place (insert named place of destination)</fullName>
            </value>
            <value>
                <fullName>DPU - Delivered at Place Unloaded (insert of place of destination)</fullName>
            </value>
            <value>
                <fullName>DDP - Delivered Duty Paid (Insert place of destination)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>