force-app/main/default/objects/Sample_Request__c/fields/Lab_Standards_QTY__c.field-meta.xml
<CustomField>
    <fullName>Lab_Standards_QTY__c</fullName>
    <label>Lab Standards (QTY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>