force-app/main/default/objects/Sample_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sample Request</relationshipLabel>
    <relationshipName>Sample_Request</relationshipName>
    <type>Lookup</type>
</CustomField>