force-app/main/default/objects/Sample_Request__c/fields/Packaging_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Requirement__c</fullName>
    <label>Packaging Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>