force-app/main/default/objects/Sample_Request__c/fields/Pharmacopeia_Reference_Grade__c.field-meta.xml
<CustomField>
    <fullName>Pharmacopeia_Reference_Grade__c</fullName>
    <label>Pharmacopeia Reference / Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>