force-app/main/default/objects/Sample_Request__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Request</relationshipLabel>
    <relationshipName>Sample_Request</relationshipName>
    <type>Lookup</type>
</CustomField>