force-app/main/default/objects/Sample_Request__c/fields/Product_Status_At_API__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_At_API__c</fullName>
    <label>Product Status At API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial R&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>