force-app/main/default/objects/Sample_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Sample Request</relationshipLabel>
    <relationshipName>Sample_Request</relationshipName>
    <type>Lookup</type>
</CustomField>