force-app/main/default/objects/Sample_Request__c/fields/Raw_Material_Packing_Material_Dispat__c.field-meta.xml
<CustomField>
    <fullName>Raw_Material_Packing_Material_Dispat__c</fullName>
    <label>Raw Material/Packing Material Dispat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>