force-app/main/default/objects/Sample_Request__c/fields/Reason_for_sending_samples__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_sending_samples__c</fullName>
    <label>Reason for sending samples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-shipment</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>MOH</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Commercial order requirement- TESTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>