force-app/main/default/objects/Sample_Request__c/fields/Sample_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sample_Sr_No__c</fullName>
    <displayFormat>SN-{0000}</displayFormat>
    <label>Sample Sr.No.</label>
    <type>AutoNumber</type>
</CustomField>