force-app/main/default/objects/Sample_Request__c/fields/Samples__c.field-meta.xml
<CustomField>
    <fullName>Samples__c</fullName>
    <label>Samples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Sample</fullName>
            </value>
            <value>
                <fullName>Working Standard Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>