force-app/main/default/objects/Sample_Request__c/fields/Supporting_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documents_Required__c</fullName>
    <label>Supporting Documents Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>